# fitness_tracker

./: .gitignore  Dockerfile  README.md  make_promt.py  projekt_inhalt.txt  pyproject.toml  requirements.txt  setup.cfg
fitness_tracker/fitness_tracker/: asgi.py  settings.py  urls.py  wsgi.py
fitness_tracker/tracker/: forms.py  models.py  tests.py  urls.py  views.py
fitness_tracker/tracker/migrations/: 0001_initial.py  0002_measurement.py  0003_workoutsession.py
fitness_tracker/tracker/templates/registration/: login.html
fitness_tracker/tracker/templates/tracker/: add_measurement.html  add_workout_session.html  base.html  index.html
fitness_tracker/tracker/tests/: test_models.py  test_views.py
