[metadata]
name = fitness_tracker
version = 0.0.1
author = Timo Jensen
author_email = ich@timo-jensen.de
description = A Django Learning Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ymeit/ypy_SMTPQueue
project_urls =
    Bug Tracker = https://github.com/ymeit/ypy_SMTPQueue/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = fitness_tracker
packages = find:
python_requires = >=3.10

[options.packages.find]
where = fitness_tracker
